--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
